infra/timeweb/10-gitops/apps/hasura/hasura.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: hasura
