infra/timeweb/10-gitops/apps/hasura/hasura.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hasura
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "75"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`apim.archpad.pro`)
      kind: Rule
      middlewares:
        - name: hasura-console-redirect
          namespace: platform
      services:
        - name: hasura
          port: 8080
  tls:
    secretName: wildcard-archpad-pro-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hasura-http
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "75"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`apim.archpad.pro`)
      kind: Rule
      services:
        - name: hasura
          port: 8080
      middlewares:
        - name: redirect-to-https
          namespace: traefik
